# carin-db

./: .env.example  .gitignore  README.md  appconfig.tsx  data.xlsx  docker-compose.yml  exported_data.xlsx  lilly_data.xlsx  md.md  package-lock.json  query.py  res.json  res_enzymeML_full.json  res_protein_only.json  ~$lilly_data.xlsx
.github/workflows/: codeql.yaml  spellcheck.yaml  test_build.yaml
backend/: Dockerfile  README.md  chat.py  config.json  cypher.py  data_sanity.py  db_connect.py  exceptions.py  extractor.py  fetch_external_api.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  test.py
backend/api/routes/: config.py  database.py  llm.py  openai.py  spreadsheet.py
backend/db/: db_connect.py  models.py
backend/llm/: agents.py  convert.py  enzymeml_agent.py  helpers.py  models.py  orchestrator.py  test.py  tools.py
backend/models/: appconfig.py  error_model.py  graph_model.py  model.py  sheet_model.py
backend/services/: config_service.py  database.py  database_populator.py  db_service.py  models.py  openai_service.py  openai_tools.py  sheet_extractor.py  sheet_model_builder.py  spreadsheet_service.py
backend/tests/: test_sheet_references.py
backend/uploads/: EnzymeML_MODAMDH_cyclohexanone.xlsx
backend/utils/: data_sanitizer.py
data_models/: app_config.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: data_model.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: InteractiveGraphVisualization.tsx  MultiEdge.tsx  References.tsx  SheetConnections.tsx  StatusMessage.tsx  appconfig.tsx  (+14 more)
notes/: completion_dm.json
uploads/: data.xlsx  exported_data.xlsx  lilly_data.xlsx  sheet_model.json
vite-project/: package-lock.json  package.json  vite.config.ts
xlknowledge/: package-lock.json  package.json  tailwind.config.ts
(+10 files in other folders)
