[tool.poetry]
name = "backend"
version = "0.2.0"
description = "Backend for AI-assistend data management"
authors = ["haeussma <83341109+haeussma@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28"
pandas = "^2.2"
openpyxl = "^3.1"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
loguru = "^0.7"
fastapi = "^0.115"
neo4j = "^5"
xlsxwriter = "^3.2"
openai-agents = "^0.0.15"
pyenzyme = {git = "https://github.com/EnzymeML/PyEnzyme.git", rev = "v2-migration"}
pydantic-ai = "^0.2.4"
pydantic-settings = "^2"
websockets = "^15.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.11.10"
pandas-stubs = "^2.2.3.241126"
types-python-dateutil = "^2.9.0.20241206"
types-requests = "^2.32.0.20241016"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
